--- a/CollegePal/app/src/main/res/layout/activity_main.xml
+++ b/CollegePal/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,92 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="20dip"
+    android:gravity="center">
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="2dip"
+        android:weightSum="1"
+        android:id="@+id/linearLayout">
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/sign_out_button"
+        android:layout_width="250dp"
+        android:layout_height="69dp"
+        android:text="@string/sign_out_button_name"
+        android:enabled="false"
+        android:visibility="gone"
+        android:layout_marginBottom="24dp"
+        android:layout_above="@+id/register_button"
+        android:layout_alignLeft="@+id/register_button"
+        android:layout_alignStart="@+id/register_button" />
+
+    <TextView
+        android:id="@+id/sign_in_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/status_signed_out"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/sign_in_button"
+        android:layout_toRightOf="@+id/linearLayout"
+        android:layout_alignRight="@+id/sign_in_button"
+        android:layout_alignEnd="@+id/sign_in_button" />
+
+    <TextView
+        android:id="@+id/circles_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/sign_in_status"
+        android:layout_toRightOf="@+id/linearLayout"
+        android:layout_alignRight="@+id/sign_in_status"
+        android:layout_alignEnd="@+id/sign_in_status" />
+    <ImageView
+        android:id="@+id/image_profilepic"
+        android:layout_width="80dp"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginLeft="41dp"
+        android:layout_marginStart="41dp"
+        android:layout_below="@+id/circles_title"
+        android:layout_toRightOf="@+id/linearLayout"
+        android:layout_toEndOf="@+id/linearLayout" />
+
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="253dp"
+        android:layout_height="62dp"
+        android:enabled="false"
+        android:layout_weight="21.38"
+        android:foregroundGravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/register_button"
+        android:layout_width="250dp"
+        android:layout_height="69dp"
+        android:text="@string/register_button_name"
+        android:enabled="false"
+        android:visibility="gone"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/sign_in_button"
+        android:layout_alignEnd="@+id/sign_in_button"
+        android:layout_marginBottom="20dp" />
+
 
 </RelativeLayout>
