--- a/CollegePal/app/src/main/res/layout/activity_create_course.xml
+++ b/CollegePal/app/src/main/res/layout/activity_create_course.xml
@@ -16,12 +16,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Course ID"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="15dp"
         android:id="@+id/textView_courseId" />
 
     <EditText
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:id="@+id/editText_courseId" />
 </TableRow>
@@ -31,12 +37,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Course Name"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="15dp"
         android:id="@+id/textView_courseName" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:id="@+id/editText_courseName"/>
 </TableRow>
@@ -46,11 +58,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Admin"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="15dp"
         android:id="@+id/textView_admin"/>
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:id="@+id/editText_admin"/>
 </TableRow>
@@ -60,12 +78,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Overview"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="15dp"
         android:id="@+id/textView_overview" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:id="@+id/editText_overview" />
 </TableRow>
@@ -76,14 +100,20 @@
         android:layout_height="wrap_content"
         android:text="Institution"
         android:id="@+id/textView_institution"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="15dp"/>
 
     <Spinner
         android:id="@+id/spinner_institution"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Select Course"
-        android:layout_marginTop="21dp"
+        android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="15dp"
         android:spinnerMode="dropdown"
         android:prompt="@string/spinner_course" />
 </TableRow>
@@ -93,7 +123,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pre-Requisites"
-        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="15dp"
         android:id="@+id/textView_prerequisites" />
 
     <iavanish.collegepal.Start.MultiSelectionSpinner
@@ -101,6 +133,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/spinner_preRequisites"
         android:text="Select Pre-Requisites"
+        android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:spinnerMode="dropdown" />
 </TableRow>
@@ -110,12 +146,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Post Conditions"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="17dp"
         android:layout_marginTop="15dp"
         android:id="@+id/textView_postConditions" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:id="@+id/editText_postCondition"/>
 </TableRow>
@@ -125,7 +167,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Instructors"
-        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="15dp"
         android:id="@+id/textView_instructors" />
 
 
@@ -134,6 +178,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Select Instructors"
+        android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:spinnerMode="dropdown" />
 </TableRow>
@@ -143,7 +191,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Course TAs"
-        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="15dp"
         android:id="@+id/textView_ta" />
 
     <iavanish.collegepal.Start.MultiSelectionSpinner
@@ -151,6 +201,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Select TAs"
+        android:layout_weight="1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:spinnerMode="dropdown"/>
 
@@ -164,7 +218,7 @@
             android:layout_height="wrap_content"
             android:text="Register Course"
             android:id="@+id/button_registerCourse"
-            android:layout_marginTop="55dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="40dp"
             android:width="120dp" />
 
@@ -173,7 +227,7 @@
             android:layout_height="wrap_content"
             android:text="Clear"
             android:id="@+id/button_clear"
-            android:layout_marginTop="55dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="40dp"
             android:width="120dp" />
      </TableRow>
