--- a/CollegePal/app/src/main/res/layout/activity_course.xml
+++ b/CollegePal/app/src/main/res/layout/activity_course.xml
@@ -1,3 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="iavanish.collegepal.Courses.CourseActivity">
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ScrollView03"
     android:layout_width="fill_parent"
@@ -16,18 +25,48 @@
             android:layout_height="wrap_content"
             android:text="View Course Dashboard"
             android:id="@+id/button_courseDashboard"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
             android:width="200dp" />
     </TableRow>
     <TableRow android:gravity="center_horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Register New Course"
+            android:text="Enroll Course"
+            android:id="@+id/button_enrollCourse"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:width="200dp" />
+    </TableRow>
+    <TableRow android:gravity="center_horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create New Course"
             android:id="@+id/button_newCourse"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
+            android:width="200dp" />
+    </TableRow>
+    <TableRow android:gravity="center_horizontal">
+       <!-- <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:id="@+id/editText_updateCourse"
+            android:layout_column="0"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:width="120dp" />-->
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Update Course"
+            android:id="@+id/button_updateCourse"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="8dp"
             android:width="200dp" />
     </TableRow>
 <TableLayout>
@@ -38,18 +77,18 @@
             android:text="Show Own Courses"
             android:id="@+id/button_ownCourses"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:width="200dp" />
     </TableRow>
     <TableRow android:gravity="center_horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show Own Courses"
+            android:text=""
             android:id="@+id/text_ownCourses"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
-            android:width="200dp" />
+            android:width="350dp" />
     </TableRow>
 </TableLayout>
 <TableLayout>
@@ -60,18 +99,18 @@
             android:text="Show All Courses"
             android:id="@+id/button_allCourses"
             android:layout_marginTop="40dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:width="200dp" />
     </TableRow>
     <TableRow android:gravity="center_horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show all Courses"
+            android:text=""
             android:id="@+id/text_allCourses"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:width="200dp" />
+            android:layout_marginLeft="10dp"
+            android:width="350dp" />
     </TableRow>
 </TableLayout>
 <TableLayout>
@@ -79,54 +118,37 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Enter preferences"
+                android:text=""
                 android:id="@+id/editText_selectCourse"
+                android:layout_column="0"
                 android:layout_marginTop="40dp"
                 android:layout_marginLeft="10dp"
-                android:width="200dp" />
+                android:width="120dp" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Select Course"
                 android:id="@+id/button_selectCourse"
-                android:layout_marginTop="40dp"
-                android:layout_marginLeft="20dp"
-                android:width="120dp" />
-        </TableRow>
-        <TableRow android:gravity="center_horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Show preferred Courses"
-                android:id="@+id/text_selectCourses"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="20dp"
-                android:width="200dp" />
-        </TableRow>
-
-    </TableLayout>
-
-    <TableLayout>
-        <TableRow>
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Enter Course Id"
-                android:id="@+id/editText_deleteCourse"
+                android:layout_column="1"
                 android:layout_marginTop="40dp"
                 android:layout_marginLeft="10dp"
-                android:width="200dp" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Delete Course"
-                android:id="@+id/button_deleteCourse"
-                android:layout_marginTop="40dp"
-                android:layout_marginLeft="20dp"
-                android:width="120dp" />
+                android:layout_weight="1"
+                android:layout_marginRight="8dp"
+                android:width="100dp" />
         </TableRow>
+
     </TableLayout>
+    <TableRow android:gravity="center_horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:id="@+id/text_selectCourses"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:width="350dp" />
+    </TableRow>
 </TableLayout>
 </ScrollView>
+</LinearLayout>
