--- a/CollegePal/app/src/main/res/layout/activity_create_course.xml
+++ b/CollegePal/app/src/main/res/layout/activity_create_course.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="iavanish.collegepal.Courses.CreateCourse">
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ScrollView01"
     android:layout_width="fill_parent"
@@ -26,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="10dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:id="@+id/editText_courseId" />
@@ -47,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="10dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:id="@+id/editText_courseName"/>
@@ -67,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="10dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:id="@+id/editText_admin"/>
@@ -88,7 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="10dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:id="@+id/editText_overview" />
@@ -111,7 +118,7 @@
         android:text="Select Course"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="10dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:spinnerMode="dropdown"
@@ -135,7 +142,7 @@
         android:text="Select Pre-Requisites"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="10dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:spinnerMode="dropdown" />
@@ -156,7 +163,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="10dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:id="@+id/editText_postCondition"/>
@@ -180,7 +187,7 @@
         android:text="Select Instructors"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
-        android:layout_marginStart="17dp"
+        android:layout_marginStart="10dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="15dp"
         android:spinnerMode="dropdown" />
@@ -209,28 +216,31 @@
         android:spinnerMode="dropdown"/>
 
 </TableRow>
-<TableRow></TableRow>
-<TableRow></TableRow>
  <TableLayout>
      <TableRow>
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="Register Course"
+            android:text="Create"
             android:id="@+id/button_registerCourse"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="40dp"
-            android:width="120dp" />
+            android:layout_marginLeft="10dp"
+            android:layout_column="0"
+            android:width="150dp" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:text="Clear"
             android:id="@+id/button_clear"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="40dp"
-            android:width="120dp" />
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:layout_column="1"
+            android:layout_marginRight="8dp"
+            android:width="150dp" />
      </TableRow>
 </TableLayout>
 </TableLayout>
 </ScrollView>
+</LinearLayout>
