--- a/CollegePal/app/src/main/res/layout/activity_student_dashboard.xml
+++ b/CollegePal/app/src/main/res/layout/activity_student_dashboard.xml
@@ -1,3 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="iavanish.collegepal.Courses.Start.StudentDashboard">
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ScrollView04"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -11,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:text="View Courses"
                 android:id="@+id/button_viewCourse"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginLeft="20dp"
                 android:width="200dp" />
 </TableRow>
@@ -21,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:text="View Calender"
                 android:id="@+id/button_viewCalender"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:width="200dp" />
  </TableRow>
@@ -31,8 +44,31 @@
             android:layout_height="wrap_content"
             android:text="View Notifications"
             android:id="@+id/button_viewNotifications"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:layout_marginLeft="20dp"
             android:width="200dp" />
     </TableRow>
+    <TableRow android:gravity="center_horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit Profile"
+            android:id="@+id/button_editProfile"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:width="200dp" />
+    </TableRow>
+    <TableRow android:gravity="center_horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign Out"
+            android:id="@+id/button_signOut"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:width="200dp" />
+    </TableRow>
+
 </TableLayout>
+</ScrollView>
+</LinearLayout>
