--- a/CollegePal/app/src/main/res/layout/activity_show_details_of_date.xml
+++ b/CollegePal/app/src/main/res/layout/activity_show_details_of_date.xml
@@ -1,6 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/gray"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
